[gd_scene load_steps=8 format=3 uid="uid://dvjlkpjvjxn0h"]

[ext_resource type="Script" uid="uid://bjlwevofrob1" path="res://scripts/Main.gd" id="1_6oykm"]
[ext_resource type="Script" uid="uid://djq7cnr1q3go0" path="res://scripts/screen_object/controls/LineEditReset.gd" id="2_0ym8f"]
[ext_resource type="Theme" uid="uid://d18y4voshb0um" path="res://Resources/Menu Theme.tres" id="3_5cu1w"]
[ext_resource type="Script" uid="uid://6dijgfptswv4" path="res://scripts/screen_object/gizmo.gd" id="4_7g88q"]
[ext_resource type="Texture2D" uid="uid://c5fl4pf7cxwvc" path="res://Assets/gizmo.png" id="5_lmu52"]

[sub_resource type="AudioStreamMicrophone" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qbb78"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.262932, 0.262932, 0.262932, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[node name="Main" type="Control" node_paths=PackedStringArray("ObjectsRoot", "MenusRoot", "gizmo")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6oykm")
ObjectsRoot = NodePath("ObjectsRoot")
MenusRoot = NodePath("Menu/PanelContainer/MainMenu/ScrollContainer/VBoxContainer/PanelContainer/MenusRoot")
gizmo = NodePath("Menu/Gizmo")

[node name="Background" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 1, 0, 1)

[node name="AudioStreamRecord" type="AudioStreamPlayer" parent="."]
stream = SubResource("1")
autoplay = true
bus = &"Record"

[node name="ObjectsRoot" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
mouse_filter = 2

[node name="Menu" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 191.0
grow_vertical = 2
mouse_force_pass_scroll_events = false
theme_override_styles/panel = SubResource("StyleBoxFlat_qbb78")

[node name="MainMenu" type="VBoxContainer" parent="Menu/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 6

[node name="TitleEdit" type="LineEdit" parent="Menu/PanelContainer/MainMenu"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "MAIN_PROFILE_PLACEHOLDER"
alignment = 1
caret_blink = true
script = ExtResource("2_0ym8f")

[node name="DeviceDropdown" type="MenuButton" parent="Menu/PanelContainer/MainMenu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "MAIN_INPUT_DEVICE_LABEL"
flat = false
item_count = 1
popup/item_0/id = 0

[node name="HBoxContainer" type="VBoxContainer" parent="Menu/PanelContainer/MainMenu"]
custom_minimum_size = Vector2(115.075, 0)
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Label" type="Label" parent="Menu/PanelContainer/MainMenu/HBoxContainer"]
layout_mode = 2
tooltip_text = "MAIN_THRESHOLD_TOOLTIP"
mouse_filter = 1
theme = ExtResource("3_5cu1w")
text = "MAIN_THRESHOLD_LABEL"

[node name="VolumeVisual" type="ProgressBar" parent="Menu/PanelContainer/MainMenu/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(15, 12.49)
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
show_percentage = false

[node name="ThresholdSlider" type="HSlider" parent="Menu/PanelContainer/MainMenu/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "MAIN_THRESHOLD_TOOLTIP"
max_value = 1.0
step = 0.01
value = 0.5

[node name="Label2" type="Label" parent="Menu/PanelContainer/MainMenu/HBoxContainer"]
layout_mode = 2
tooltip_text = "MAIN_LOUDNESS_TOOLTIP"
mouse_filter = 1
theme = ExtResource("3_5cu1w")
text = "MAIN_LOUDNESS_LABEL"

[node name="InputGainSlider" type="HSlider" parent="Menu/PanelContainer/MainMenu/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 10)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "MAIN_LOUDNESS_TOOLTIP"
max_value = 24.0
step = 0.1

[node name="ScrollContainer" type="ScrollContainer" parent="Menu/PanelContainer/MainMenu"]
custom_minimum_size = Vector2(0, 130.82)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/PanelContainer/MainMenu/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Menu/PanelContainer/MainMenu/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 23.555)
layout_mode = 2
tooltip_text = "MAIN_NEW_SCREEN_OBJECT_LABEL"
text = "+"

[node name="PanelContainer" type="PanelContainer" parent="Menu/PanelContainer/MainMenu/ScrollContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MenusRoot" type="VBoxContainer" parent="Menu/PanelContainer/MainMenu/ScrollContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="Label" type="Label" parent="Menu/PanelContainer/MainMenu"]
layout_mode = 2
theme = ExtResource("3_5cu1w")
text = "MAIN_SHOW_MENU_LABEL"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Settings" type="Button" parent="Menu/PanelContainer/MainMenu"]
layout_mode = 2
text = "MAIN_SYSTEM_SETTINGS_LABEL"

[node name="CloseButton" type="Button" parent="Menu/PanelContainer/MainMenu"]
layout_mode = 2
text = "MAIN_HIDE_MENU_BUTTON"

[node name="SettingsMenu" type="Control" parent="Menu/PanelContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Menu/PanelContainer/SettingsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopMenuItems" type="VBoxContainer" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2"]
layout_mode = 2

[node name="Main Menu" type="Button" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems"]
layout_mode = 2
text = "SETTINGS_BACK_BUTTON"

[node name="Fullscreen" type="Button" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems"]
layout_mode = 2
text = "SETTINGS_FULLSCREEN_BUTTON"

[node name="Save Data" type="Button" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems"]
layout_mode = 2
text = "SETTINGS_SAVE_BUTTON"

[node name="Load Data" type="Button" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems"]
layout_mode = 2
text = "SETTINGS_LOAD_BUTTON"

[node name="Transparency Toggle" type="Panel" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/Transparency Toggle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/Transparency Toggle/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SETTINGS_TRANSPARENT_BACKGROUND_LABEL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BGTransparentToggle" type="CheckBox" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/Transparency Toggle/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
size_flags_stretch_ratio = 0.22
theme = ExtResource("3_5cu1w")
button_pressed = true
alignment = 1
icon_alignment = 1

[node name="BackgroundColor" type="Panel" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 45)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/BackgroundColor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/BackgroundColor/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SETTINGS_BACKGROUND_COLOR_LABEL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorPickerButton" type="ColorPickerButton" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/BackgroundColor/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.52
color = Color(0, 1, 0, 1)

[node name="Fixed Window Size" type="Panel" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems"]
clip_contents = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/Fixed Window Size"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "SETTINGS_WINDOW_SIZE_TOOLTIP"

[node name="MarginContainer" type="MarginContainer" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/Fixed Window Size/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/Fixed Window Size/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(100, 15)
layout_mode = 2
text = "SETTINGS_WINDOW_SIZE_LABEL"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/Fixed Window Size/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FixedWindowSizeToggle" type="CheckBox" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/Fixed Window Size/HBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_5cu1w")

[node name="WindowSize" type="Panel" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 85)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/WindowSize"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.5
offset_top = -33.0
offset_right = 41.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/WindowSize/VBoxContainer"]
layout_mode = 2
tooltip_text = "Locks window size to prevent unwanted resizing"

[node name="CenterContainer2" type="CenterContainer" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/WindowSize/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/WindowSize/VBoxContainer/HBoxContainer2/CenterContainer2"]
layout_mode = 2
text = "SETTINGS_WINDOW_SIZE_WIDTH_LABEL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/WindowSize/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="fixedWindowWidthSpinbox" type="SpinBox" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/WindowSize/VBoxContainer/HBoxContainer2/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 600.0
max_value = 5000.0
value = 1200.0
alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/WindowSize/VBoxContainer"]
layout_mode = 2
tooltip_text = "Locks window size to prevent unwanted resizing"

[node name="CenterContainer" type="CenterContainer" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/WindowSize/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/WindowSize/VBoxContainer/HBoxContainer3/CenterContainer"]
layout_mode = 2
text = "SETTINGS_WINDOW_SIZE_HEIGHT_LABEL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer2" type="CenterContainer" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/WindowSize/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="fixedWindowHeightSpinbox" type="SpinBox" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/WindowSize/VBoxContainer/HBoxContainer3/CenterContainer2"]
unique_name_in_owner = true
layout_mode = 2
min_value = 600.0
max_value = 5000.0
value = 800.0
alignment = 1

[node name="FPS" type="PanelContainer" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/FPS"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/FPS/MarginContainer"]
layout_mode = 2

[node name="CurrentFPSLabel" type="Label" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/FPS/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "SETTINGS_CURRENT_FPS_LABEL"

[node name="FPSCapContainer" type="HBoxContainer" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/FPS/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FPSCapLabel" type="Label" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/FPS/MarginContainer/VBoxContainer/FPSCapContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SETTINGS_FPS_CAP_LABEL"

[node name="FPSCapToggle" type="CheckBox" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/FPS/MarginContainer/VBoxContainer/FPSCapContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_5cu1w")

[node name="FPSDropdownContainer" type="HBoxContainer" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/FPS/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="MaxFPSLabel" type="Label" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/FPS/MarginContainer/VBoxContainer/FPSDropdownContainer"]
layout_mode = 2
text = "SETTINGS_MAX_FPS_LABEL"

[node name="MaxFPSSpinbox" type="SpinBox" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/FPS/MarginContainer/VBoxContainer/FPSDropdownContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 5.0
max_value = 500.0
value = 60.0
rounded = true
allow_greater = true

[node name="Language" type="PanelContainer" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/Language"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/Language/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/Language/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SETTINGS_LANGUAGE_LABEL"
autowrap_mode = 2

[node name="LanguageDropdown" type="OptionButton" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/Language/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="BottomMenuItems" type="VBoxContainer" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="VersionLabel" type="Label" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/BottomMenuItems"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "SETTINGS_VERSION_LABEL"

[node name="QuitButton" type="Button" parent="Menu/PanelContainer/SettingsMenu/VBoxContainer2/BottomMenuItems"]
layout_mode = 2
text = "SETTINGS_QUIT_BUTTON"

[node name="Gizmo" type="Control" parent="Menu"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_7g88q")

[node name="Button" type="TextureButton" parent="Menu/Gizmo"]
layout_mode = 0
offset_left = -62.5
offset_top = -62.5
offset_right = 62.5
offset_bottom = 62.5
texture_normal = ExtResource("5_lmu52")

[node name="ImageOpenDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
initial_position = 1
size = Vector2i(682, 589)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png, *.jpg, *.jpeg, *.bmp, *.dds, *.ktx, *.exr, *.hdr, *.tga, *.svg, *.webp")
show_hidden_files = true
use_native_dialog = true

[node name="JSONSaveDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
access = 2
filters = PackedStringArray("*.gdtuber,*.json")
show_hidden_files = true
use_native_dialog = true

[node name="JSONLoadDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
size = Vector2i(312, 175)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.gdtuber,*.json")
show_hidden_files = true
use_native_dialog = true

[node name="AutosaveTimer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="AudioResetTimer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[connection signal="text_submitted" from="Menu/PanelContainer/MainMenu/TitleEdit" to="." method="_set_profile_name"]
[connection signal="value_changed" from="Menu/PanelContainer/MainMenu/HBoxContainer/ThresholdSlider" to="." method="_on_v_slider_drag_ended"]
[connection signal="value_changed" from="Menu/PanelContainer/MainMenu/HBoxContainer/InputGainSlider" to="." method="_on_input_gain_change"]
[connection signal="pressed" from="Menu/PanelContainer/MainMenu/ScrollContainer/VBoxContainer/Button" to="." method="_add_new_object_to_scene"]
[connection signal="pressed" from="Menu/PanelContainer/MainMenu/Settings" to="." method="_open_settings"]
[connection signal="pressed" from="Menu/PanelContainer/MainMenu/CloseButton" to="." method="_on_button_button_down"]
[connection signal="pressed" from="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/Main Menu" to="." method="_close_settings"]
[connection signal="pressed" from="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/Fullscreen" to="." method="_on_fullscreen_toggle"]
[connection signal="pressed" from="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/Save Data" to="." method="_on_save_button"]
[connection signal="pressed" from="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/Load Data" to="." method="_load_dialog"]
[connection signal="toggled" from="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/Transparency Toggle/HBoxContainer/BGTransparentToggle" to="." method="_toggle_transparent"]
[connection signal="color_changed" from="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/BackgroundColor/HBoxContainer/ColorPickerButton" to="." method="_change_background_color"]
[connection signal="toggled" from="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/Fixed Window Size/HBoxContainer/CenterContainer/FixedWindowSizeToggle" to="." method="_on_fixed_window_button_toggled"]
[connection signal="value_changed" from="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/WindowSize/VBoxContainer/HBoxContainer2/CenterContainer/fixedWindowWidthSpinbox" to="." method="_on_ws_lock_width_value_changed"]
[connection signal="value_changed" from="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/WindowSize/VBoxContainer/HBoxContainer3/CenterContainer2/fixedWindowHeightSpinbox" to="." method="_on_ws_lock_height_value_changed"]
[connection signal="toggled" from="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/FPS/MarginContainer/VBoxContainer/FPSCapContainer/FPSCapToggle" to="." method="_on_fps_cap_toggled"]
[connection signal="value_changed" from="Menu/PanelContainer/SettingsMenu/VBoxContainer2/TopMenuItems/FPS/MarginContainer/VBoxContainer/FPSDropdownContainer/MaxFPSSpinbox" to="." method="_on_max_fps_spinbox_value_changed"]
[connection signal="pressed" from="Menu/PanelContainer/SettingsMenu/VBoxContainer2/BottomMenuItems/QuitButton" to="." method="_on_quit_button_button_down"]
[connection signal="button_down" from="Menu/Gizmo/Button" to="Menu/Gizmo" method="drag"]
[connection signal="button_up" from="Menu/Gizmo/Button" to="Menu/Gizmo" method="dragnt"]
[connection signal="file_selected" from="JSONSaveDialog" to="." method="_save_file"]
[connection signal="file_selected" from="JSONLoadDialog" to="." method="_load_data"]
[connection signal="timeout" from="AutosaveTimer" to="." method="_on_autosave_timer_timeout"]
[connection signal="timeout" from="AudioResetTimer" to="." method="_on_audio_reset_timer_timeout"]
